Java 11 / JFX 17 (#385)
* Delete macjre.zip

* Delete winjre64.zip

* Remove lfs

* Update bundles

* J11 init

* Fix travis

* libAVPlayer should be stored natively

* Add native web deps

* Update changelog-2022.0.txt

* Deprecation cleanup

* Remove old 32 bit windows parts

* Add MainStub

* Remove jcenter

* Add main stub comment